--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "core-js": "^3.8.3",
+    "element-plus": "^2.8.4",
+    "tsparticles": "^3.5.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
